--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,12 @@
             <artifactId>java.jdbc</artifactId>
             <version>0.7.10</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 </project>
